examples/test/testpolicy13794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13794
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key9: value31
      key24: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value42
          key38: value35
          key4: value27
      podSelector:
        matchLabels:
          key26: value45
          key49: value10
          key25: value8
